squished a bug

--- a/static/style.css
+++ b/static/style.css
@@ -330,6 +330,7 @@ label {
     z-index: 1;
     transition: margin 0.4s ease;
     overflow: hidden;
+    font-size: 19px;
 }
 
 @media all and (max-width: 600px) {
@@ -375,7 +376,6 @@ label {
 .menubara {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.75);
-    font-size: 19px;
     display: block;
     margin: 8px 15px;
     padding: 8px 0px;
@@ -412,9 +412,8 @@ label {
     transition: all 0.2s;
     padding: 4px 12px;
     text-decoration: none;
-    font-size: 14px;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     user-select: none;
     cursor: pointer;
     border-radius: 4px;
@@ -1252,6 +1251,8 @@ button {
     overflow: hidden;
     position: sticky;
     top: 70px;
+    height: max-content;
+    font-size: 14px;
 }
 
 @media all and (max-width: 600px) {
